RESOLVED FIXED134892
[UNIX] Log error description when failing to create shared memory file.
https://bugs.webkit.org/show_bug.cgi?id=134892
Summary [UNIX] Log error description when failing to create shared memory file.
Carlos Alberto Lopez Perez
Reported 2014-07-14 12:26:02 PDT
On the ARM GTK bot the API test WebKit2Gtk/TestFrame:hide is failing with the following errors: http://build.webkit.org/builders/GTK%20Linux%20ARM%20Release/builds/3035/steps/API%20tests/logs/stdio : [..............] /webkit2/WebKitFindController/hide: Failed to create shared memory file /WK2SharedMemory.2654833468 Failed to create shared memory file /WK2SharedMemory.252736190 Failed to create shared memory file /WK2SharedMemory.1351846665 Failed to create shared memory file /WK2SharedMemory.2627554507 Failed to create shared memory file /WK2SharedMemory.1604822939 ** ERROR:../../Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestWebKitFindController.cpp:271:void testFindControllerHide(FindControllerTest*, gconstpointer): assertion failed: (originalSurface) FAIL [..............] The error isn't very helpful, so logging the cause (errno description) will help to identify the underlying problem.
Attachments
Patch (1.48 KB, patch)
2014-07-14 12:32 PDT, Carlos Alberto Lopez Perez
no flags
Carlos Alberto Lopez Perez
Comment 1 2014-07-14 12:32:10 PDT
WebKit Commit Bot
Comment 2 2014-07-14 14:37:45 PDT
Comment on attachment 234873 [details] Patch Clearing flags on attachment: 234873 Committed r171084: <http://trac.webkit.org/changeset/171084>
WebKit Commit Bot
Comment 3 2014-07-14 14:37:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.