[UNIX] Log error description when failing to create shared memory file. https://bugs.webkit.org/show_bug.cgi?id=134892

Patch by Carlos Alberto Lopez Perez <clopez@igalia.com> on 2014-07-14
Reviewed by Darin Adler.

* Platform/unix/SharedMemoryUnix.cpp:
(WebKit::SharedMemory::create): Print the string describing the error number (errno).

Canonical link: https://commits.webkit.org/152848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171084 268f45cc-cd09-0410-ab3c-d52691b4dbfc